Fixes to Verifast translation